--- a/SWE573/pulse/templates/pulse/index.html
+++ b/SWE573/pulse/templates/pulse/index.html
@@ -62,8 +62,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h1 class="mt-5">A Bootstrap 4 Starter Template</h1>
-          <p class="lead">Complete with pre-defined file paths and responsive navigation!</p>
+          <h1 class="mt-5">Tweets About Beyonce</h1>
+          <p class="lead">{{tweets}}</p>
           <ul class="list-unstyled">
             <li>Bootstrap 4.0.0</li>
             <li>jQuery 3.3.0</li>
