Implemented ntlk, implemented chart.js

--- a/SWE573/pulse/templates/base.html
+++ b/SWE573/pulse/templates/base.html
@@ -18,6 +18,9 @@
 
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="{% static '/css/base.css' %}" type="text/css">
+
+    {% block style %}
+    {% endblock %}
 </head>
 
 <body>
