More work on UI

--- a/SWE573/pulse/templates/base.html
+++ b/SWE573/pulse/templates/base.html
@@ -44,10 +44,7 @@
                     <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#">Contribute</a>
                 </li>
             </ul>
         </div>
@@ -57,7 +54,6 @@
 <!-- Page Content -->
 {% block pagecontent %}
 {% endblock %}
-
 
 <!-- Bootstrap core JavaScript -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
