Added footer, bitcoin modal

--- a/SWE573/pulse/templates/base.html
+++ b/SWE573/pulse/templates/base.html
@@ -19,8 +19,8 @@
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="{% static '/css/base.css' %}" type="text/css">
 
-    {% block style %}
-    {% endblock %}
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+
 </head>
 
 <body>
@@ -28,32 +28,83 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Pulse</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home
-                        <span class="sr-only">(current)</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contribute</a>
-                </li>
-            </ul>
-        </div>
+        <a class="navbar-brand" href="#"> <i class="fa fa-twitter"></i>&nbsp;&nbsp;Sentweet</a>
     </div>
 </nav>
 
 <!-- Page Content -->
 {% block pagecontent %}
 {% endblock %}
+
+<!-- Bitcoin Modal -->
+<div class="modal fade" id="btcModal" tabindex="-1" role="dialog" aria-labelledby="btcModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="btcModalLabel">Donate Bitcoin</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                If you like this project, and would like to donate, our bitcoin address is:
+                <br>
+                <br>
+                <span><b>14J7nTUpRcT5FJo4ZMzyAamp2c17Ajmohu</b></span>
+                <br>
+                <br>
+                <img src="{% static 'images/btc.png' %}" alt="BTC">
+                <br>
+                <br>
+                Thank you!
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<footer id="myFooter">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-3">
+                <h5>Get started</h5>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Sign up</a></li>
+                    <li><a href="#">Downloads</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-3">
+                <h5>About us</h5>
+                <ul>
+                    <li><a href="#">Company Information</a></li>
+                    <li><a href="#">Contact us</a></li>
+                    <li><a href="#">Reviews</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-3">
+                <h5>Support</h5>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Help desk</a></li>
+                    <li><a href="#">Forums</a></li>
+                </ul>
+            </div>
+            <div class="col-sm-3">
+                <div class="social-networks">
+                    <a href="https://github.com/umutseven92/SWE573" class="github"><i class="fa fa-github"></i></a>
+                    <a href="mailto:umutseven92@gmail.com" class="mail"><i class="fa fa-envelope"></i></a>
+                    <a href="#" class="btc" data-toggle="modal" data-target="#btcModal"><i class="fa fa-btc"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright">
+        <p>Made with <i class="fa fa-heart"></i> by Umut Seven</p>
+    </div>
+</footer>
 
 <!-- Bootstrap core JavaScript -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -65,6 +116,10 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
+{% block script %}
+{% endblock %}
+
 </body>
 
 </html>
