--- a/SWE573/pulse/templates/base.html
+++ b/SWE573/pulse/templates/base.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="Umut Seven">
 
-    <title>Pulse - {% block title %}{% endblock %}</title>
+    <title>Sentweet{% block title %}{% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -47,7 +47,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                If you like this project, and would like to donate, our bitcoin address is:
+                If you like this project, and would like to donate, our Bitcoin address is:
                 <br>
                 <br>
                 <span><b>14J7nTUpRcT5FJo4ZMzyAamp2c17Ajmohu</b></span>
@@ -68,31 +68,15 @@
 <footer id="myFooter">
     <div class="container">
         <div class="row">
-            <div class="col-sm-3">
-                <h5>Get started</h5>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Sign up</a></li>
-                    <li><a href="#">Downloads</a></li>
-                </ul>
+            <div class="col-sm-4">
+                <h4>About</h4>
+                <p>Sentweet is a sentiment analyzer that uses Twitter to give you an idea about how people feel about a certain topic.</p>
             </div>
-            <div class="col-sm-3">
-                <h5>About us</h5>
-                <ul>
-                    <li><a href="#">Company Information</a></li>
-                    <li><a href="#">Contact us</a></li>
-                    <li><a href="#">Reviews</a></li>
-                </ul>
+            <div class="col-sm-4">
+                <h4>How to Use</h4>
+                <p>Just input your search term and your date range and press Submit. </p>
             </div>
-            <div class="col-sm-3">
-                <h5>Support</h5>
-                <ul>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Help desk</a></li>
-                    <li><a href="#">Forums</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-3">
+            <div class="col-sm-4">
                 <div class="social-networks">
                     <a href="https://github.com/umutseven92/SWE573" class="github"><i class="fa fa-github"></i></a>
                     <a href="mailto:umutseven92@gmail.com" class="mail"><i class="fa fa-envelope"></i></a>
