Moved to aws s3 for static files

--- a/SWE573/pulse/templates/pulse/index.html
+++ b/SWE573/pulse/templates/pulse/index.html
@@ -41,7 +41,7 @@
 {% block script %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"
             type="application/javascript"></script>
-    <script src="{% static '/js/index.js' %}" type="application/javascript"></script>
+    <script src="https://s3.amazonaws.com/sentweet-s3/js/index.js" type="application/javascript"></script>
     <script>
         var res = "{{ result }}";
 
