--- a/SWE573/pulse/templates/base.html
+++ b/SWE573/pulse/templates/base.html
@@ -17,7 +17,7 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="{% static '/css/base.css' %}" type="text/css">
+    <link rel="stylesheet" href="https://s3.amazonaws.com/sentweet-s3/css/base.css" type="text/css">
 
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
@@ -53,7 +53,7 @@
                 <span><b>14J7nTUpRcT5FJo4ZMzyAamp2c17Ajmohu</b></span>
                 <br>
                 <br>
-                <img src="{% static 'images/btc.png' %}" alt="BTC">
+                <img src="https://s3.amazonaws.com/sentweet-s3/images/btc.png" alt="BTC">
                 <br>
                 <br>
                 Thank you!
