Tons of work on the UI, some validation in the backend

--- a/SWE573/pulse/templates/base.html
+++ b/SWE573/pulse/templates/base.html
@@ -12,6 +12,9 @@
 
     <title>Sentweet{% block title %}{% endblock %}</title>
 
+    <link rel="icon" type="image/png" href="https://s3.amazonaws.com/sentweet-s3/images/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="https://s3.amazonaws.com/sentweet-s3/images/favicon-16x16.png" sizes="16x16" />
+
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -70,7 +73,8 @@
         <div class="row">
             <div class="col-sm-4">
                 <h4>About</h4>
-                <p>Sentweet is a sentiment analyzer that uses Twitter to give you an idea about how people feel about a certain topic.</p>
+                <p>Sentweet is a sentiment analyzer that uses Twitter to give you an idea about how people feel about a
+                    certain topic.</p>
             </div>
             <div class="col-sm-4">
                 <h4>How to Use</h4>
@@ -91,8 +95,8 @@
 </footer>
 
 <!-- Bootstrap core JavaScript -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -105,5 +109,7 @@
 {% endblock %}
 
 </body>
-
+<div id="loading">
+      <img id="loading-image" src="https://s3.amazonaws.com/sentweet-s3/images/lg.dual-gear-loading-icon.gif" alt="Loading..." />
+</div>
 </html>
