--- a/SWE573/SWE573/static/css/base.css
+++ b/SWE573/SWE573/static/css/base.css
@@ -1,6 +1,7 @@
-html{
+html {
     min-height: 100%;
 }
+
 body {
     padding-top: 54px;
 }
@@ -19,10 +20,13 @@ body {
     width: 1200px;
 }
 
-/* Form */
-#main_form{
-    margin: 0 auto;
-    width: 200px;
+#main_container {
+    margin-bottom: 2em;
+    margin-top: 1.5em;
+}
+
+#summary_col {
+    margin-top: 1em;
 }
 
 /* Footer */
@@ -68,7 +72,7 @@ body {
     margin-top: 30px;
 }
 
-#myFooter h2 a{
+#myFooter h2 a {
     font-size: 50px;
     text-align: center;
     color: #fff;
@@ -132,7 +136,7 @@ body {
     }
 }
 
-.social-networks i{
+.social-networks i {
     font-size: 2em;
 }
 
@@ -140,7 +144,7 @@ body {
     color: red;
 }
 
-.fa-btc{
+.fa-btc {
     color: gold;
 }
 
@@ -150,5 +154,26 @@ body {
 }
 
 .modal-body {
+    text-align: center;
+}
+
+/* Loader */
+#loading-image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+#loading {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    display: block;
+    opacity: 0.7;
+    background-color: #fff;
+    z-index: 99;
     text-align: center;
 }
