--- a/SWE573/pulse/templates/pulse/index.html
+++ b/SWE573/pulse/templates/pulse/index.html
@@ -14,23 +14,31 @@
         <div id="main_chart">
             <canvas id="result_chart"></canvas>
         </div>
-        <div id="main_form">
-            <form action="{% url 'pulse:index' %}" method="post">
-                {% csrf_token %}
-                <div class="form-group">
-                    <label for="search_term_input">Search Term</label>
-                    <input type="text" class="form-control" name="search_term" id="search_term_input" required/>
+        <div class="container" id="main_container">
+            <div class="row">
+                <div id="main_form" class="col-md-3">
+                    <form action="{% url 'pulse:index' %}" method="post">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <label for="search_term_input">Search Term</label>
+                            <input type="text" class="form-control" name="search_term" id="search_term_input" required/>
+                        </div>
+                        <div class="form-group">
+                            <label for="start_date_input">Start Date</label>
+                            <input type="date" class="form-control" name="start_date" id="start_date_input" min="2006-03-21" max="{{ today }}" required/>
+                        </div>
+                        <div class="form-group">
+                            <label for="end_date_input">End Date</label>
+                            <input type="date" class="form-control" name="end_date" id="end_date_input" min="2006-03-21" max="{{ today }}" required/>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit">Submit</button>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label for="start_date_input">Start Date</label>
-                    <input type="date" class="form-control" name="start_date" id="start_date_input" required/>
+                <div class="col-md-8" id="summary_col">
+                    <h2>Summary</h2>
+                    <p>{{ summary }}</p>
                 </div>
-                <div class="form-group">
-                    <label for="end_date_input">End Date</label>
-                    <input type="date" class="form-control" name="end_date" id="end_date_input" required/>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+            </div>
         </div>
 
     </div>
@@ -55,4 +63,5 @@
     </script>
 {% endblock %}
 </body>
+
 </html>
