--- a/SWE573/pulse/templates/base.html
+++ b/SWE573/pulse/templates/base.html
@@ -31,7 +31,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="#"> <i class="fa fa-twitter"></i>&nbsp;&nbsp;Sentweet</a>
+        <a class="navbar-brand" href="#"> <img id="birb_small_logo" alt="Birb Logo" src="https://s3.amazonaws.com/sentweet-s3/images/birblogo.png"/>&nbsp;&nbsp;Sentweet</a>
     </div>
 </nav>
 
@@ -71,16 +71,15 @@
 <footer id="myFooter">
     <div class="container">
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-2">
+               <img id="birb_large_logo" src="https://s3.amazonaws.com/sentweet-s3/images/birblogo.png" alt="Birb Logo">
+            </div>
+            <div class="col-sm-7">
                 <h4>About</h4>
                 <p>Sentweet is a sentiment analyzer that uses Twitter to give you an idea about how people feel about a
                     certain topic.</p>
             </div>
-            <div class="col-sm-4">
-                <h4>How to Use</h4>
-                <p>Just input your search term and your date range and press Submit. </p>
-            </div>
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <div class="social-networks">
                     <a href="https://github.com/umutseven92/SWE573" class="github"><i class="fa fa-github"></i></a>
                     <a href="mailto:umutseven92@gmail.com" class="mail"><i class="fa fa-envelope"></i></a>
