Added meta tags

--- a/SWE573/pulse/templates/base.html
+++ b/SWE573/pulse/templates/base.html
@@ -7,7 +7,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="Sentweet is a sentiment analyzer & visualizer that uses the Twitter API.">
+    <meta name="keywords" content="Sentiment,Analysis,Twitter">
     <meta name="author" content="Umut Seven">
 
     <title>Sentweet{% block title %}{% endblock %}</title>
