--- a/SWE573/pulse/templates/pulse/index.html
+++ b/SWE573/pulse/templates/pulse/index.html
@@ -25,11 +25,11 @@
                         </div>
                         <div class="form-group">
                             <label for="start_date_input">Start Date</label>
-                            <input type="date" class="form-control" name="start_date" id="start_date_input" min="2006-03-21" max="{{ today }}" required/>
+                            <input type="text" id="start_date_input" name="start_date" class="form-control" required/>
                         </div>
                         <div class="form-group">
                             <label for="end_date_input">End Date</label>
-                            <input type="date" class="form-control" name="end_date" id="end_date_input" min="2006-03-21" max="{{ today }}" value="{{ today }}" required/>
+                            <input type="text" id="end_date_input" name="end_date" class="form-control" required/>
                         </div>
                         <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit">Submit</button>
                     </form>
@@ -49,7 +49,9 @@
 {% block script %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"
             type="application/javascript"></script>
-    <script src="https://s3.amazonaws.com/sentweet-s3/js/index.js" type="application/javascript"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+            type="application/javascript"></script>
+    <script src="{% static 'js/index.js' %}" type="application/javascript"></script>
     <script>
         var res = "{{ result }}";
 
