--- a/SWE573/pulse/templates/base.html
+++ b/SWE573/pulse/templates/base.html
@@ -13,8 +13,8 @@
 
     <title>Sentweet{% block title %}{% endblock %}</title>
 
-    <link rel="icon" type="image/png" href="https://s3.amazonaws.com/sentweet-s3/images/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="https://s3.amazonaws.com/sentweet-s3/images/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="{% static 'images/favicon-32x32.png' %}" sizes="32x32" />
+    <link rel="icon" type="image/png" href="{% static 'images/favicon-16x16.png' %}" sizes="16x16" />
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/pepper-grinder/jquery-ui.css" type="text/css">
 
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="https://s3.amazonaws.com/sentweet-s3/css/base.css" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css">
 
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
@@ -34,7 +34,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="#"> <img id="birb_small_logo" alt="Birb Logo" src="https://s3.amazonaws.com/sentweet-s3/images/birblogo.png"/>&nbsp;&nbsp;Sentweet</a>
+        <a class="navbar-brand" href="#"> <img id="birb_small_logo" alt="Birb Logo" src="{% static 'images/birblogo.png' %}"/>&nbsp;&nbsp;Sentweet</a>
     </div>
 </nav>
 
@@ -59,7 +59,7 @@
                 <span><b>14J7nTUpRcT5FJo4ZMzyAamp2c17Ajmohu</b></span>
                 <br>
                 <br>
-                <img src="https://s3.amazonaws.com/sentweet-s3/images/btc.png" alt="BTC">
+                <img src="{% static 'images/btc.png' %}" alt="BTC">
                 <br>
                 <br>
                 Thank you!
@@ -75,7 +75,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-2">
-               <img id="birb_large_logo" src="https://s3.amazonaws.com/sentweet-s3/images/birblogo.png" alt="Birb Logo">
+               <img id="birb_large_logo" src="{% static 'images/birblogo.png' %}" alt="Birb Logo">
             </div>
             <div class="col-sm-7">
                 <h4>About</h4>
@@ -112,6 +112,6 @@
 
 </body>
 <div id="loading">
-      <img id="loading-image" src="https://s3.amazonaws.com/sentweet-s3/images/lg.dual-gear-loading-icon.gif" alt="Loading..." />
+      <img id="loading-image" src="{% static 'images/lg.dual-gear-loading-icon.gif' %}" alt="Loading..." />
 </div>
 </html>
